--- a/packages/jazz-core/package.json
+++ b/packages/jazz-core/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "jazz-etl",
+  "name": "@jazz-etl/jazz-core",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpileOnly --no-notify src/index.ts",
+    "dev": "ts-node-dev  -r tsconfig-paths/register  --respawn --transpileOnly --ignore-watch node_modules --no-notify src/index.ts",
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "jest --watch",
     "test:once": "jest"
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://github.com/bruno-bert/jazz-etl#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bruno-bert/jazz-etl.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bruno-bert/jazz-etl/issues"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.155",
-    "@types/require-from-string": "^1.2.0",
-    "@types/xml2js": "^0.4.5",
+    "@types/node": "^14.0.13",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.45",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.5"
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.18",
-    "require-from-string": "^2.0.2",
-    "xml2js": "^0.4.23",
-    "yargs": "^15.3.1"
+    "require-from-string": "^2.0.2"
   }
 }
