--- a/packages/jazz-core/package.json
+++ b/packages/jazz-core/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.155",
     "@types/node": "^14.0.13",
+    "@types/uuid": "^8.0.0",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.45",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "require-from-string": "^2.0.2"
+    "require-from-string": "^2.0.2",
+    "uuid": "^8.2.0"
   }
 }
