--- a/packages/jazz-core/package.json
+++ b/packages/jazz-core/package.json
@@ -23,9 +23,10 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
-    "@types/lodash": "^4.14.155",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.18",
     "jest": "^26.0.1",
+    "lodash": "^4.17.19",
     "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.45",
     "tsconfig-paths": "^3.9.0",
